Fixed issue #1: Added platform independent taskbar icon.